# TC_Generation_Agents

./: README.md
backend/: pyproject.toml
backend/src/: .env  Agents_module.py  Files_treatment.py  Graph_creation.py  Jira_export.py  Jira_export1.py  Jira_import.py  app.py  app_FUNCTIONAL_v1.py  app_functional_v0.py  app_v2.py  logging_config.py  test.py
